# mjlabplusplus

./: .gitignore  README.md  pyproject.toml  setup.py
src/mjlabplusplus/: __init__.py
src/mjlabplusplus/assets/robots/deeprobotics_lite3/mjcf/: lite3.xml
src/mjlabplusplus/assets/robots/deeprobotics_lite3/urdf/: lite3.urdf
src/mjlabplusplus/assets/robots/dr02/mjcf/: dr02.xml
src/mjlabplusplus/assets/robots/dr02/urdf/: dr02_std.urdf
src/mjlabplusplus/assets/robots/unitree_a1/mjcf/: a1.xml
src/mjlabplusplus/assets/robots/unitree_a1/urdf/: a1.urdf
src/mjlabplusplus/assets/robots/unitree_go2/mjcf/: go2.xml
src/mjlabplusplus/assets/robots/unitree_go2/urdf/: go2_description.urdf
src/mjlabplusplus/robots/: __init__.py  deeprobotics_lite3.py  dr02.py  unitree_a1.py  unitree_go2.py
src/mjlabplusplus/tasks/: __init__.py
src/mjlabplusplus/tasks/velocity/: __init__.py  quadruped_env_cfgs.py  quadruped_rl_cfgs.py  rewards.py
src/mjlabplusplus/tasks/velocity/deeprobotics_lite3/: __init__.py  env_cfgs.py  rl_cfg.py
src/mjlabplusplus/tasks/velocity/dr02/: __init__.py  env_cfgs.py  rl_cfg.py
src/mjlabplusplus/tasks/velocity/unitree_a1/: __init__.py  env_cfgs.py  rl_cfg.py
src/mjlabplusplus/tasks/velocity/unitree_go2/: __init__.py  env_cfgs.py  rl_cfg.py
tests/: test_dr02_assets.py  test_dr02_velocity_config.py  test_quadruped_assets.py  test_quadruped_velocity_config.py
